Integration is done